--- a/style/default.css
+++ b/style/default.css
@@ -1,8 +1,7 @@
 @font-face {
   font-family: 'Cormorant';
   font-weight: 700;
-  src: local('Cormorant-Bold'), local('Cormotant'),
-    url('../fonts/cormorant-v11-latin_cyrillic-700.woff2') format('woff2'),
+  src: url('../fonts/cormorant-v11-latin_cyrillic-700.woff2') format('woff2'),
     url('../fonts/cormorant-v11-latin_cyrillic-700.woff') format('woff');
   font-display: swap;
 }
@@ -38,6 +37,14 @@ body {
 }
 
 h1,
+h2,
+h3,
+p, span {
+  margin: 0;
+  padding: 0;
+}
+
+h1,
 h2 {
   font-family: 'Cormorant', serif;
   font-weight: 700;
@@ -47,15 +54,16 @@ h2 {
 }
 
 .container {
-  max-width: 1290px;
+  max-width: 1390px;
   margin: 0 auto;
+  padding: 0 50px;
 }
 
 .hide {
   display: none;
 }
 
-ul{
+ul {
   margin: 0;
   padding: 0;
   list-style: none;
@@ -66,6 +74,27 @@ a {
   text-decoration: none;
 }
 
-button, input {
+button,
+input {
   font: inherit;
+}
+
+@media (max-width: 1440px) {
+  .container {
+    padding: 0 42px;
+  }
+}
+@media (max-width: 1200px) {
+}
+@media (max-width: 1000px) {
+  .container {
+    padding: 0 39px;
+  }
+}
+@media (max-width: 760px) {
+}
+@media (max-width: 580px) {
+  .container {
+    padding: 0 10px;
+  }
 }
