--- a/style/navigation.css
+++ b/style/navigation.css
@@ -1,17 +1,18 @@
 .navigation__list {
   display: flex;
   gap: 50px;
+  justify-content: space-between;
 }
 
-.navigation__link{
+.navigation__link {
   position: relative;
   font-weight: 400;
   line-height: 1.3;
   letter-spacing: 0.04em;
 }
 
-.navigation__link::before{
-  content: "";
+.navigation__link::before {
+  content: '';
   position: absolute;
   bottom: 0;
   left: 0;
@@ -19,13 +20,68 @@
   height: 2px;
   background-color: var(--main-bg-color);
   transform: scaleX(0);
-  transition: transform .3s ease-in-out;
+  transition: transform 0.3s ease-in-out;
 }
 
-.navigation__link:hover::before{
+.navigation__link:hover::before {
   transform: scaleX(1);
 }
 
-.navigation__link:active{
+.navigation__link:active {
   color: var(--three-color);
+}
+
+@media (max-width: 1440px) {
+  .navigation__list {
+    gap: 20px;
+  }
+  .navigation__link {
+    font-size: 16px;
+    letter-spacing: 0.64px;
+  }
+}
+
+@media (max-width: 1000px) {
+  .navigation {
+    display: none;
+    width: 100%;
+  }
+  .navigation_active {
+    display: block;
+  }
+  .navigation__list {
+    padding-top: 38px;
+    gap: 35px;
+  }
+  .navigation__item {
+    flex-basis: 146px;
+  }
+  .navigation__link {
+    display: block;
+    padding: 7px 10px;
+    width: 100%;
+    text-align: center;
+    font-size: 14px;
+    letter-spacing: 0.56px;
+    border-radius: 20px;
+    border: 1px solid #e5ab39;
+  }
+  .navigation__link:hover::before {
+    transform: scaleX(0);
+  }
+}
+@media (max-width: 760px) {
+  .navigation__list {
+    flex-wrap: wrap;
+    gap: 8px 6px;
+  }
+  .navigation__item{
+    flex-basis: calc(50% - 6px);
+  }
+  .navigation__link {
+    font-size: 12px;
+    letter-spacing: 0.48px;
+  }
+}
+@media (max-width: 580px) {
 }
